feat(diagnostic-analyzer): 移除工作区路径设置，添加支持文件自动加载功能 feat(language-server): 移除工作区文件夹设置 feat(test): 添加跨文件引用的测试用例